# cmake_pattern_templates

./: CMakeLists.txt  LICENSE  README.md  cmake_pattern_templatesConfig.cmake.in
cmake/: cmake_pattern_templatesConfig.cmake
include/cmake_pattern_templates/: lib1.hpp  lib2.hpp
src/: lib1.cpp  lib2.cpp
test/: test1.cpp
